--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,11 @@
-[package]
-name = "rust-base-util"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [
+    "base-util",
+    "binance-future-api"
+]
+resolver = "2"
 
 
-[dependencies]
-futures-util = "0.3"
-log = "0.4"
-tokio = { version = "1", features = ["full", "tracing"] }
-tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
-tungstenite = "0.26"
-rand = "0.9"
 
 
-[dev-dependencies]
-env_logger = "0.11.6"
+
