--- a/binance-future-api/Cargo.toml
+++ b/binance-future-api/Cargo.toml
@@ -14,3 +14,4 @@ log = "0.4.27"
 tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
 uuid = { version = "1", features = ["v4", "fast-rng"] }
 dashmap = "7.0.0-rc2"
+reqwest = { version = "0.12", features = ["json"] }
