--- a/binance-future-api/Cargo.toml
+++ b/binance-future-api/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rust_decimal = "1"
-base_util = { path = "../base-util" }
+base-util = { path = "../base-util" }
 env_logger = "0.11.6"
 tokio = { version = "1", features = ["full", "tracing"] }
 log = "0.4.27"
